# ESP32_NUS_NAV_MAP

./: CLAUDE.md  ESP32_Navigation_OpenStreetMap_Design.md
esp32/: CMakeLists.txt  DESIGN.md  build_log.txt  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  clock_model.c  clock_model.h  device_manager.c  device_manager.h  display.c  display.h  img.h  lv_font_vi_12.c  main.c  map_cache.c  map_cache.h  map_model.c  map_model.h  model.h  nav_model.c  nav_model.h  nav_proto.h  nus.c  nus.h  nus_protocol.c  nus_protocol.h  projection.c  projection.h
gen_image/: gen.py
mobile/: IOS_BUILD.md  README.md  pubspec.yaml  thiet-ke-ung-dung-chi-duong-ble-nus.md
mobile/android/: gradle.properties
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/ble/: ble_bridge.dart  crc16_mcrf4xx.dart  flutter_blue_transport.dart  i_ble_transport.dart  nus_constants.dart
mobile/lib/core/: constants.dart  event_bus.dart  map_debug.dart
mobile/lib/models/: app_settings.dart  ble_device.dart  geo_point.dart  gps_fix.dart  maneuver_type.dart  nav_event.dart  nav_state.dart  place.dart  road_segment.dart  route_model.dart  route_preview_state.dart  traffic_sign.dart  travel_profile.dart
mobile/lib/navigation/: i_location_service.dart  location_service.dart  map_matcher.dart  nav_controller.dart  nav_voice.dart
mobile/lib/providers/: app_providers.dart  ble_providers.dart  nav_providers.dart  ui_providers.dart
mobile/lib/ui/: format.dart
(+32 files in other folders)
